Hide css property in note

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,7 +1,8 @@
-{}{
+{
   "enabledCssSnippets": [
     "MCL Gallery Cards",
     "MCL Multi Column",
     "MCL Wide Views",
+    "hide-css-tag"
   ]
 }
