--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .obsidian/workspace.json
-.obsidian/plugins/remotely-save
+.obsidian/plugins/remotely-save/main.js
+.obsidian/plugins/remotely-save/styles.css
