--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -3,6 +3,8 @@
     "MCL Gallery Cards",
     "MCL Multi Column",
     "MCL Wide Views",
-    "hide-css-tag"
-  ]
+    "hide-css-tag",
+    "extended-colorschemes"
+  ],
+  "cssTheme": "AnuPpuccin"
 }
