feat: rework tasks display in home

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .obsidian/plugins/remotely-save/main.js
 .obsidian/plugins/remotely-save/styles.css
 .obsidian/icons
+2 - Area/2.2 - Organisation/Daily notes
