--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -6,5 +6,6 @@
     "hide-css-tag",
     "extended-colorschemes"
   ],
-  "cssTheme": "AnuPpuccin"
+  "cssTheme": "AnuPpuccin",
+  "theme": "obsidian"
 }
